--- a/Condition Monitoring of Hydraulic System/Naive_Bayes.ipynb
+++ b/Condition Monitoring of Hydraulic System/Naive_Bayes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f578e726",
+   "id": "28880d01",
    "metadata": {},
    "source": [
     "# Importing modules"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
-   "id": "1e7c2b2a",
+   "execution_count": 180,
+   "id": "3964be1d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,12 +20,13 @@
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
+    "import seaborn as sns\n",
     "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "54686099",
+   "id": "467664c4",
    "metadata": {},
    "source": [
     "# Loading datset"
@@ -33,8 +34,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
-   "id": "b70c406d",
+   "execution_count": 181,
+   "id": "33c35369",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,8 +44,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
-   "id": "8c53161e",
+   "execution_count": 182,
+   "id": "6f188c84",
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +418,7 @@
        "[2205 rows x 23 columns]"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,8 +429,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
-   "id": "0f957fa5",
+   "execution_count": 183,
+   "id": "28a8070b",
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +443,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,8 +454,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
-   "id": "90877372",
+   "execution_count": 184,
+   "id": "741d3cbf",
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +754,7 @@
        "[8 rows x 23 columns]"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -764,7 +765,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92fc1462",
+   "id": "158681b8",
    "metadata": {},
    "source": [
     "# Assigning values to X and y"
@@ -772,8 +773,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
-   "id": "af9bde2b",
+   "execution_count": 185,
+   "id": "606d9ca9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -785,8 +786,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
-   "id": "d0095d1d",
+   "execution_count": 186,
+   "id": "6bba0ab2",
    "metadata": {},
    "outputs": [
     {
@@ -1098,7 +1099,7 @@
        "[2205 rows x 17 columns]"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1109,8 +1110,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
-   "id": "eb8dc4e8",
+   "execution_count": 187,
+   "id": "bb69e29a",
    "metadata": {},
    "outputs": [
     {
@@ -1265,7 +1266,7 @@
        "[2205 rows x 5 columns]"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1276,7 +1277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6314afd2",
+   "id": "04818ab4",
    "metadata": {},
    "source": [
     "# Splitting dataset to train and test"
@@ -1284,8 +1285,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
-   "id": "cab584a8",
+   "execution_count": 188,
+   "id": "ef9f2e27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1294,8 +1295,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
-   "id": "d350049c",
+   "execution_count": 189,
+   "id": "809327f4",
    "metadata": {},
    "outputs": [
     {
@@ -1607,7 +1608,7 @@
        "[1764 rows x 17 columns]"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1618,8 +1619,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
-   "id": "8b1f1a07",
+   "execution_count": 190,
+   "id": "26dd0024",
    "metadata": {},
    "outputs": [
     {
@@ -1774,7 +1775,7 @@
        "[1764 rows x 5 columns]"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1785,8 +1786,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
-   "id": "d8586ece",
+   "execution_count": 191,
+   "id": "511e9e65",
    "metadata": {},
    "outputs": [
     {
@@ -2098,7 +2099,7 @@
        "[441 rows x 17 columns]"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2109,8 +2110,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
-   "id": "91fe21a2",
+   "execution_count": 192,
+   "id": "d182e543",
    "metadata": {},
    "outputs": [
     {
@@ -2265,7 +2266,7 @@
        "[441 rows x 5 columns]"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2276,7 +2277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10ad0a56",
+   "id": "8fdda423",
    "metadata": {},
    "source": [
     "# Initialize separate classifiers for each target variable"
@@ -2284,8 +2285,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
-   "id": "2999cf03",
+   "execution_count": 193,
+   "id": "ee23626b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2298,7 +2299,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe59f14d",
+   "id": "f5817eff",
    "metadata": {},
    "source": [
     "# Fit each classifier on the corresponding target variable"
@@ -2306,20 +2307,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
-   "id": "57c2b1bd",
+   "execution_count": 194,
+   "id": "2dc721fa",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<style>#sk-container-id-5 {color: black;}#sk-container-id-5 pre{padding: 0;}#sk-container-id-5 div.sk-toggleable {background-color: white;}#sk-container-id-5 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-5 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-5 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-5 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-5 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-5 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-5 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-5 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-5 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-5 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-5 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-5 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-5 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-5 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-5 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-5 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-5 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-5 div.sk-item {position: relative;z-index: 1;}#sk-container-id-5 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-5 div.sk-item::before, #sk-container-id-5 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-5 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-5 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-5 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-5 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-5 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-5 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-5 div.sk-label-container {text-align: center;}#sk-container-id-5 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-5 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-5\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>MultinomialNB()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-5\" type=\"checkbox\" checked><label for=\"sk-estimator-id-5\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">MultinomialNB</label><div class=\"sk-toggleable__content\"><pre>MultinomialNB()</pre></div></div></div></div></div>"
+       "<style>#sk-container-id-6 {color: black;}#sk-container-id-6 pre{padding: 0;}#sk-container-id-6 div.sk-toggleable {background-color: white;}#sk-container-id-6 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-6 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-6 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-6 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-6 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-6 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-6 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-6 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-6 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-6 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-6 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-6 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-6 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-6 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-6 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-6 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-6 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-6 div.sk-item {position: relative;z-index: 1;}#sk-container-id-6 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-6 div.sk-item::before, #sk-container-id-6 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-6 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-6 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-6 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-6 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-6 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-6 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-6 div.sk-label-container {text-align: center;}#sk-container-id-6 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-6 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-6\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>MultinomialNB()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-6\" type=\"checkbox\" checked><label for=\"sk-estimator-id-6\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">MultinomialNB</label><div class=\"sk-toggleable__content\"><pre>MultinomialNB()</pre></div></div></div></div></div>"
       ],
       "text/plain": [
        "MultinomialNB()"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2334,7 +2335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7033610",
+   "id": "b0b6fa2d",
    "metadata": {},
    "source": [
     "# Make predictions on the test data for each classifier"
@@ -2342,8 +2343,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
-   "id": "f30386a2",
+   "execution_count": 195,
+   "id": "dd26c420",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2356,7 +2357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0765833e",
+   "id": "7c859ce6",
    "metadata": {},
    "source": [
     "# Evaluate the performance for each classifier"
@@ -2364,8 +2365,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
-   "id": "eb9df4d2",
+   "execution_count": 196,
+   "id": "d068e254",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2378,7 +2379,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e978f70b",
+   "id": "e97302d9",
    "metadata": {},
    "source": [
     "# Print results"
@@ -2386,8 +2387,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
-   "id": "c84d54d5",
+   "execution_count": 197,
+   "id": "1178b65d",
    "metadata": {},
    "outputs": [
     {
@@ -2412,7 +2413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7570d6f0",
+   "id": "d1e9afd4",
    "metadata": {},
    "source": [
     "# Generate classification reports and confusion matrices"
@@ -2420,8 +2421,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
-   "id": "64078d5a",
+   "execution_count": 198,
+   "id": "708d9a91",
    "metadata": {},
    "outputs": [
     {
@@ -2468,7 +2469,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e53b068",
+   "id": "b42caa2c",
    "metadata": {},
    "source": [
     "# Print classification reports and confusion matrices"
@@ -2476,8 +2477,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
-   "id": "37b76424",
+   "execution_count": 199,
+   "id": "bb8b3530",
    "metadata": {},
    "outputs": [
     {
@@ -2604,9 +2605,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "281f59c0",
+   "metadata": {},
+   "source": [
+    "# Function to plot confusion matrix as heatmap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "id": "20b9bade",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_confusion_matrix_heatmap(matrix, class_names, title):\n",
+    "    plt.figure(figsize=(8, 6))\n",
+    "    sns.heatmap(matrix, annot=True, fmt='d', cmap='Blues', xticklabels=class_names, yticklabels=class_names)\n",
+    "    plt.title(title)\n",
+    "    plt.xlabel('Predicted')\n",
+    "    plt.ylabel('Actual')\n",
+    "    plt.show()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42dda678",
+   "id": "b48511ad",
    "metadata": {},
    "outputs": [],
    "source": []
