--- a/Condition Monitoring of Hydraulic System/SVM.ipynb
+++ b/Condition Monitoring of Hydraulic System/SVM.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "deef651f",
    "metadata": {},
    "outputs": [],
@@ -20,6 +20,7 @@
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.svm import SVC\n",
+    "from sklearn.multioutput import MultiOutputClassifier\n",
     "import seaborn as sns\n",
     "from sklearn.metrics import roc_curve, auc\n",
     "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix"
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "fc006965",
    "metadata": {},
    "outputs": [],
@@ -45,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "089104d0",
    "metadata": {},
    "outputs": [
@@ -419,7 +420,7 @@
        "[2205 rows x 23 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "aad26e71",
    "metadata": {},
    "outputs": [
@@ -444,7 +445,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "68136dff",
    "metadata": {},
    "outputs": [
@@ -755,7 +756,7 @@
        "[8 rows x 23 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "017039bd",
    "metadata": {},
    "outputs": [],
@@ -787,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "c69d8996",
    "metadata": {},
    "outputs": [
@@ -1100,7 +1101,7 @@
        "[2205 rows x 17 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1111,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "id": "2d66d5c2",
    "metadata": {},
    "outputs": [
@@ -1267,7 +1268,7 @@
        "[2205 rows x 5 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1286,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "id": "784bce48",
    "metadata": {},
    "outputs": [],
@@ -1296,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "id": "92d67084",
    "metadata": {},
    "outputs": [
@@ -1609,7 +1610,7 @@
        "[1764 rows x 17 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1620,7 +1621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "id": "bf9ccf48",
    "metadata": {},
    "outputs": [
@@ -1776,7 +1777,7 @@
        "[1764 rows x 5 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1787,7 +1788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "id": "c79fd07b",
    "metadata": {},
    "outputs": [
@@ -2100,7 +2101,7 @@
        "[441 rows x 17 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2111,7 +2112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "id": "cf29ac96",
    "metadata": {},
    "outputs": [
@@ -2267,7 +2268,7 @@
        "[441 rows x 5 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2277,12 +2278,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "71c85263",
+   "metadata": {},
+   "source": [
+    "# Initialize and fit SVM classifier"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "f94c2b84",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "svm_classifier = SVC(kernel='linear', C=1)\n",
+    "\n",
+    "# Wrap the classifier in MultiOutputClassifier to handle multiple target variables\n",
+    "multi_output_classifier = MultiOutputClassifier(svm_classifier)\n",
+    "\n",
+    "# Train the classifier\n",
+    "multi_output_classifier.fit(X_train, y_train)"
+   ]
   }
  ],
  "metadata": {
